test/fail/inherits-self.grace
constructor name(value) {}

object {
  inherits name(self)
}
